tests/invalid/simple/SetComprehension_CompileFail_3.whiley
void System::main([string] args):
    {int} zs
    {int} xs
    xs = {1,2,3}
    zs = { x | x ∈ zs }
    print str(xs)
    print str(zs)
